--- a/imaging.html
+++ b/imaging.html
@@ -28,10 +28,41 @@
 
   <main>
     <article>
-    <h1>Our Purpose</h1>
-      <p>
-            We are developing a new organization dedicated to supporting individuals with catastrophic hyperacusis and those at risk of rapid worsening. Our mission is to provide reliable, evidence-informed guidance, practical coping strategies, and a compassionate community where sufferers can connect with others who truly understand the challenges of extreme sound sensitivity.
-     </p>
+      <h1>Diagnostic Imaging</h1>
+          <p>Diagnostic imaging plays a supportive role in evaluating severe hyperacusis and noxacusis.</p>
+
+          <h2>1. Purpose of Imaging</h2>
+          <ul>
+            <li>Rule out secondary causes.</li>
+            <li>Identify structural abnormalities in auditory or neurological pathways.</li>
+            <li>Guide management for atypical, asymmetric, or progressive symptoms.</li>
+          </ul>
+
+          <h2>2. Common Imaging Modalities</h2>
+          <h3>a. MRI</h3>
+          <ul>
+            <li>Preferred for unilateral or neurologically complex cases.</li>
+            <li>Detects vestibular schwannoma, vascular compression, demyelinating disease, brainstem lesions, SSCD.</li>
+          </ul>
+
+          <h3>b. CT</h3>
+          <ul>
+            <li>Best for bony and middle-ear abnormalities.</li>
+            <li>Detects SSCD, perilymph fistula, otosclerosis, ossicular defects.</li>
+          </ul>
+
+          <h3>c. Functional / Research Imaging</h3>
+          <ul>
+            <li>fMRI and PET show increased activation in auditory and limbic regions.</li>
+            <li>Supports central gain enhancement and emotional-auditory network dysfunction.</li>
+          </ul>
+
+          <h2>3. Clinical Indications</h2>
+          <ul>
+            <li>Unilateral or asymmetric symptoms</li>
+            <li>Auditory pain triggered by normal sound levels</li>
+            <li>Associated hearing loss or tinnitus</li>
+          </ul>
     </article>
   </main>
 
