--- a/resources.html
+++ b/resources.html
@@ -28,11 +28,11 @@
 
   <main>
     <article>
-    <h1>Our Purpose</h1>
+    <h1>Resources</h1>
       <p>
-            We are developing a new organization dedicated to supporting individuals with catastrophic hyperacusis and those at risk of rapid worsening. Our mission is to provide reliable, evidence-informed guidance, practical coping strategies, and a compassionate community where sufferers can connect with others who truly understand the challenges of extreme sound sensitivity.
-     </p>
-    </article>
+Hyperacusis Guide is dedicated to helping individuals affected by hyperacusis — a rare and often misunderstood condition that causes an increased sensitivity to everyday sounds. Because of its rarity and the lack of widespread awareness, reliable information and supportive resources can be difficult to find. This website aims to bring together credible guidance, medical insights, and personal strategies to make navigating hyperacusis easier for those seeking understanding and relief.  
+    </p>
+</article>
   </main>
 
   <script>
