--- a/social.html
+++ b/social.html
@@ -28,11 +28,10 @@
 
   <main>
     <article>
-    <h1>Our Purpose</h1>
+    <h1>Social</h1>
       <p>
-            We are developing a new organization dedicated to supporting individuals with catastrophic hyperacusis and those at risk of rapid worsening. Our mission is to provide reliable, evidence-informed guidance, practical coping strategies, and a compassionate community where sufferers can connect with others who truly understand the challenges of extreme sound sensitivity.
-     </p>
-    </article>
+You can connect with us on social media to stay updated on new resources, research, and community discussions about hyperacusis. Follow us on the platforms below to join the conversation and help raise awareness about this rare condition.    </p>
+</article>
   </main>
 
   <script>
