--- a/guide.html
+++ b/guide.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Minimalist Dark Mode Website</title>
+  <title>Hyperacusis Guide</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -21,8 +21,8 @@
       <li><a href="index.html">Our Purpose</a></li>
       <li><a href="guide.html">Precautionary Guide</a></li>
       <li><a href="imaging.html">Diagnostic Imaging</a></li>
-      <li><a href="#">Resources</a></li>
-      <li><a href="#">Social</a></li>
+      <li><a href="resources.html">Resources</a></li>
+      <li><a href="social.html">Social</a></li>
     </ul>
   </nav>
 
