--- a/social.html
+++ b/social.html
@@ -26,6 +26,7 @@
     </ul>
   </nav>
 
+  <div class="scroll-container">
   <main>
     <article>
   <h1>The Clockmaker’s Secret</h1>
@@ -60,7 +61,8 @@
 
   <p>The clocks never stopped. And neither did the stories.</p></article>
   </main>
-
+  </div>
+  
   <script>
     const hamburger = document.getElementById('hamburger');
     const sidebar = document.getElementById('sidebar');
