--- a/imaging.html
+++ b/imaging.html
@@ -34,7 +34,6 @@
 
         <h2>High-Resolution CT Scan of Temporal Bones</h2>
         
-        <p class="section-title">Why This Imaging Is Essential</p>
         <p>High-resolution computed tomography (HRCT) of the temporal bones is the gold standard for visualizing the delicate structures of the inner ear. This imaging modality provides detailed views of:</p>
         <ul>
             <li>The bony labyrinth containing the cochlea and vestibular organs</li>
@@ -45,7 +44,7 @@
             <li>The temporal bone structure itself</li>
         </ul>
 
-        <p class="section-title">Optimal Scanning Protocol</p>
+        <h2>Optimal Scanning Protocol</h2>
         <p>For hyperacusis evaluation, the CT scan should follow these specifications:</p>
         <ul>
             <li><strong>Slice thickness:</strong> 0.6 mm or less (thin-cut protocol) - This is critical for detecting small abnormalities</li>
@@ -59,7 +58,7 @@
             <p><strong>Important:</strong> Request the actual DICOM images on a CD or digital format, not just the radiologist's report. A specialist experienced in temporal bone anatomy may identify findings that a general radiologist might miss.</p>
         </div>
 
-        <h2>Key Conditions Detected by Temporal Bone CT</h2>
+        <h2>Key Conditions Detected by Temporal Bone CT:</h2>
 
         <p class="section-title">1. Superior Canal Dehiscence Syndrome (SCDS)</p>
         <p>This is one of the most important conditions to rule out in hyperacusis patients:</p>
