--- a/botox.html
+++ b/botox.html
@@ -67,6 +67,9 @@
         Botox treatment for hyperacusis and MEM/TTTS is therefore considered experimental, but may represent a 
         valuable option for patients with refractory symptoms not responsive to medication or sound therapy.
       </p>
+            <p>
+      <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Medication, Botox, and Paper Patching Spreadsheet</a>
+      </P>
     </article>
   </main>
   
