--- a/medications.html
+++ b/medications.html
@@ -61,6 +61,12 @@
         Overall, pharmacologic approaches remain largely experimental, and treatment must be individualized, cautious, and combined 
         with environmental stabilization to prevent further auditory injury.
       </p>
+      <p>
+      The link below provides real-world data collected from patients who have tried a variety of treatments, including clomipramine, duloxetine, amitriptyline, nortriptyline, Botox, ambroxol, and the tympanic membrane paper patching technique. It reflects actual patient experiences and outcomes, offering insights into the effectiveness and tolerability of these interventions. This resource can help inform treatment decisions based on documented results from individuals who have undergone these therapies.
+      </p>
+      <p>
+      <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Medication, Botox, and Paper Patching Spreadsheet</a>
+      </P>
     </article>
   </main>
   
