--- a/mem.html
+++ b/mem.html
@@ -38,6 +38,24 @@
 
   <main>
     <article>
+      <h1>Middle Ear Myoclonus</h1>
+
+      <p>
+        Middle ear myoclonus (MEM) involves involuntary, repetitive contractions of the tensor tympani and/or stapedius muscles, sometimes producing
+        audible clicking or thumping sounds perceived by the patient or even an examiner. Both conditions are thought to
+        arise from heightened central and peripheral auditory reflexes, often following acoustic trauma, stress, or
+        prolonged sound sensitivity. 
+      </p>
+      <p>
+        In individuals with hyperacusis or noxacusis, the auditory system becomes hypersensitized,
+        and these protective reflexes can become maladaptive—firing excessively or continuously in response to normal
+        environmental sounds. Over time, this can reinforce a cycle of pain, muscle tension, and heightened auditory gain,
+        contributing to the persistence and severity of sound-induced discomfort.
+      </p>
+      <p>
+      The <a class="link" href="https://www.facebook.com/groups/middleearmyoclonus/" target="_blank" rel="noopener noreferrer">middle ear myoclonus (MEM) support group</a> on Facebook offers a community where individuals can share their experiences, discuss symptoms, and explore treatment outcomes. It provides a space for members to connect with others facing similar challenges and to exchange valuable information about managing and understanding the condition.
+      </p>
+      <div class="page-break" aria-hidden="true"></div>
       <h1>Tonic Tensor Tympani Syndrome</h1>
 
       <p>
@@ -51,20 +69,8 @@
         of fullness, fluttering, pressure, or pain deep in the ear, and may exacerbate sound intolerance by increasing
         mechanical tension on the eardrum and ossicles.
       </p>
-
-      <h1>Middle Ear Myoclonus</h1>
-
       <p>
-        MEM involves involuntary, repetitive contractions of the tensor tympani and/or stapedius muscles, sometimes producing
-        audible clicking or thumping sounds perceived by the patient or even an examiner. Both conditions are thought to
-        arise from heightened central and peripheral auditory reflexes, often following acoustic trauma, stress, or
-        prolonged sound sensitivity. 
-      </p>
-      <p>
-        In individuals with hyperacusis or noxacusis, the auditory system becomes hypersensitized,
-        and these protective reflexes can become maladaptive—firing excessively or continuously in response to normal
-        environmental sounds. Over time, this can reinforce a cycle of pain, muscle tension, and heightened auditory gain,
-        contributing to the persistence and severity of sound-induced discomfort.
+      The <a class="link" href="https://www.facebook.com/groups/503100723229728/" target="_blank" rel="noopener noreferrer">tonic tensor tympani support group</a> is a Facebook community which focuses on discussions, personal experiences, and treatment outcomes related to tonic tensor tympani syndrome (TTTS). This group provides a supportive environment where members can share insights, coping strategies, and information to help better understand and manage this complex condition.
       </p>
     </article>
   </main>
