--- a/patch.html
+++ b/patch.html
@@ -63,6 +63,9 @@
         reversibility, and potential to provide relief for patients with mechanically mediated hyperacusis 
         or noxacusis-like pain linked to middle ear hypersensitivity.
       </p>
+            <p>
+      <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Medication, Botox, and Paper Patching Spreadsheet</a>
+      </P>
     </article>
   </main>
   
