--- a/silverstein.html
+++ b/silverstein.html
@@ -42,7 +42,7 @@
       <h1>Silverstein Procedure</h1>
 
       <p>
-        The Silverstein procedure, also known as the round and oval window reinforcement surgery,
+        The <a class="link" href="https://www.earrf.org/hyperacusis" target="_blank" rel="noopener noreferrer">Silverstein procedure</a>, also known as the round and oval window reinforcement surgery,
         is a surgical technique developed by Dr. Herbert Silverstein as a potential treatment
         for severe hyperacusis. 
       </p>
@@ -79,6 +79,13 @@
         primarily for patients with severe, refractory hyperacusis who have exhausted conservative
         options.
       </p>
+      <p>The <a class="link" href="https://www.facebook.com/groups/2271375819742791/" target="_blank" rel="noopener noreferrer">Hyperacusis Surgery Talk group</a> on Facebook features numerous real patient experiences and outcomes related to the Silverstein procedure. It serves as a valuable space where individuals discuss their results, recovery journeys, and insights, providing an authentic look into the effectiveness and challenges of this surgical approach.</p>
+      <div class="page-break" aria-hidden="true"></div>
+       <h1>Finding a Specialist Who Can Perform the Silverstein Procedure</h1>
+       <p>
+Locating a specialist qualified to perform the Silverstein procedure can be quite difficult, as only a limited number of surgeons have been trained in this specific technique. The image below displays a map of the United States featuring surgeons who have trained at the Silverstein Institute, possibly making it easier for patients to identify potential providers in their area. Clicking the image will take you to the <a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer">Ear Research Foundation fellowship graduates</a> website which provides further details and a larger view of the map.
+</p>
+<p><a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer"><img src="silverstein.webp" alt="Description of image" class="full-width-image"></a></p>
     </article>
   </main>
   
