--- a/spreadsheets.html
+++ b/spreadsheets.html
@@ -52,7 +52,7 @@
         Each spreadsheet is organized by condition and treatment type for easier comparison and reference.
       </p>
       <p>
-      <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?gid=0#gid=0" target="_blank" rel="noopener noreferrer">Medication and Botox Spreadsheet</a>
+      <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Medication, Botox, and Paper Patching Spreadsheet</a>
       </P>
     </article>
   </main>
