--- a/silverstein.html
+++ b/silverstein.html
@@ -83,9 +83,9 @@
       <div class="page-break" aria-hidden="true"></div>
        <h1>Finding a Specialist Who Can Perform the Silverstein Procedure</h1>
        <p>
-Locating a specialist qualified to perform the Silverstein procedure can be quite difficult, as only a limited number of surgeons have been trained in this specific technique. The image below displays a map of the United States featuring surgeons who have trained at the Silverstein Institute, possibly making it easier for patients to identify potential providers in their area. Clicking the image will take you to the <a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer">Ear Research Foundation fellowship graduates</a> website which provides further details and a larger view of the map.
+Locating a specialist qualified to perform the Silverstein procedure can be quite difficult, as only a limited number of surgeons have been trained in this specific technique. The image below displays a map of the United States featuring surgeons who have trained at the Silverstein Institute, possibly making it easier for patients to identify potential providers in their area. Opening the image will take you to the <a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer">Ear Research Foundation fellowship graduates</a> website which provides further details and a larger view of the map.
 </p>
-<p><a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer"><img src="silverstein.webp" alt="Description of image" class="full-width-image"></a></p>
+<p><a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer"><img src="silverstein.jpg" alt="Description of image" class="full-width-image"></a></p>
     </article>
   </main>
   
