--- a/imaging.html
+++ b/imaging.html
@@ -46,7 +46,7 @@
         ideally before symptoms become too severe to tolerate medical procedures. 
       </p>
       <p>
-        In particular, a high-resolution CT scan of the temporal bones is strongly 
+        In particular, a <a class="link" href="https://radiopaedia.org/cases/84293/studies/99584?lang=us" target="_blank" rel="noopener noreferrer">high-resolution CT scan of the temporal bones</a> is strongly 
         recommended as soon as possible. This scan can reveal structural conditions 
         such as superior semicircular canal dehiscence (SSCD) or other middle- or 
         inner-ear abnormalities that may underlie or worsen sound sensitivity.
