--- a/silverstein.html
+++ b/silverstein.html
@@ -81,11 +81,22 @@
       </p>
       <p>The <a class="link" href="https://www.facebook.com/groups/2271375819742791/" target="_blank" rel="noopener noreferrer">Hyperacusis Surgery Talk group</a> on Facebook features numerous real patient experiences and outcomes related to the Silverstein procedure. It serves as a valuable space where individuals discuss their results, recovery journeys, and insights, providing an authentic look into the effectiveness and challenges of this surgical approach.</p>
       <div class="page-break" aria-hidden="true"></div>
-       <h1>Finding a Specialist Who Can Perform the Silverstein Procedure</h1>
+       <h1>Finding a Physician Who Can Perform the Silverstein Procedure</h1>
        <p>
-Locating a specialist qualified to perform the Silverstein procedure can be quite difficult, as only a limited number of surgeons have been trained in this specific technique. The image below displays a map of the United States featuring surgeons who have trained at the Silverstein Institute, possibly making it easier for patients to identify potential providers in their area. Opening the image will take you to the <a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer">Ear Research Foundation fellowship graduates</a> website which provides further details and a larger view of the map.
+Finding a specialist qualified to perform the Silverstein procedure can be challenging, as only a limited number of surgeons have received training in this technique. The <a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer">Ear Research Foundation Fellowship Graduates website</a> provides a list of physicians who trained with Dr. Herbert Silverstein, along with a map of their locations; however, not all of these physicians necessarily perform the Silverstein procedure.
 </p>
-<p><a class="link" href="https://www.earrf.org/fellowship-graduates" target="_blank" rel="noopener noreferrer"><img src="silverstein.jpg" alt="Description of image" class="full-width-image"></a></p>
+      <div class="page-break" aria-hidden="true"></div>
+       <h1>Physicians Who Are Known to Have Expertise in the Silverstein Procedure</h1>
+       <p>
+       Below is a list of physicians who are either known to have performed the Silverstein procedure or have indicated that they are willing to perform it. This list is intended to help patients identify qualified practitioners for consultation or treatment.
+       </p>
+       <ul>
+            <li><a class="link" href="https://www.earrf.org/drherbertsilverstein" target="_blank" rel="noopener noreferrer">Dr. Herbert Silverstein, MD</a> — Sarasota, FL</li>
+            <li><a class="link" href="https://smhfpg.com/doctors/nayak-neil-s-md/" target="_blank" rel="noopener noreferrer">Dr. Neil Nayak, MD</a> — Sarasota, FL</li>
+            <li><a class="link" href="https://michiganear.com/our-physicians/dennis-i-bojrab-m-d/" target="_blank" rel="noopener noreferrer">Dr. Dennis Bojrab Sr., MD</a> — Farmington Hills, MI</li>
+            <li><a class="link" href="https://www.entspecialistspc.com/physicians/dr-matthew-farrugia/" target="_blank" rel="noopener noreferrer">Dr. Matthew Farrugia, DO</a> — Novi, MI</li>
+            <li><a class="link" href="https://doctors.intermountainhealth.org/provider/jonathan-l-hatch/2555758" target="_blank" rel="noopener noreferrer">Dr. Jonathan Hatch, MD</a> — Murray, UT</li>
+        </ul>
     </article>
   </main>
   
